[ADD] flex-box-grid cdn into index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,9 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/book2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- Flexbox-grid -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" />
+
     <title>Biblioteca</title>
   </head>
   <body>
